@@ -30,6 +30,6 @@ public class GameService {
     @Transactional(readOnly = true)
     public List<GameMinDTO> findAll() {
         List<Game> result = gameRepository.findAll();
-        return result.stream().map(x -> new GameMinDTO(x)).collect(Collectors.toList());
+        return result.stream().map(x -> new GameMinDTO(x)).toList();
     }
 }
